--- a/package.json
+++ b/package.json
@@ -3,7 +3,15 @@
   "version": "1.0.0",
   "main": "js/main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node tests/puppeteer/run-all-tests.js",
+    "test:critical": "node tests/puppeteer/critical-path-tests.js",
+    "test:checklist": "node tests/puppeteer/checklist-functionality-tests.js",
+    "test:api": "node tests/puppeteer/api-integration-tests.js",
+    "test:frontend": "node tests/puppeteer/frontend_tests.js",
+    "test:accessibility": "node tests/puppeteer/accessibility_tests.js",
+    "test:performance": "node tests/puppeteer/performance_tests.js",
+    "test:headless": "HEADLESS=true node tests/puppeteer/run-all-tests.js",
+    "test:headed": "HEADLESS=false node tests/puppeteer/run-all-tests.js",
     "concat:css": "concat -o global.css css/modal.css css/focus.css css/landing.css css/admin.css css/form-elements.css css/table.css css/section.css css/status.css css/side-panel.css css/header.css css/base.css",
     "minify:css": "npx postcss global.css -o global.css",
     "build:css": "npm-run-all concat:css minify:css",
@@ -18,6 +26,7 @@
     "cssnano": "^7.0.6",
     "eslint-plugin-sonarjs": "^3.0.5",
     "npm-run-all": "^4.1.5",
+    "playwright": "^1.55.1",
     "postcss": "^8.5.3",
     "postcss-cli": "^11.0.1"
   }
