Add demo test functionality and update test configuration
- Add demo-test.js with comprehensive Puppeteer demo functionality
- Update package.json with new demo test scripts (demo:headless, demo:headed, demo:watch)
- Enhance test-config.js with improved browser configuration
- Update README.md with comprehensive test documentation
- Add demo test screenshots for visual verification

--- a/package.json
+++ b/package.json
@@ -12,6 +12,12 @@
     "test:performance": "node tests/puppeteer/performance_tests.js",
     "test:headless": "HEADLESS=true node tests/puppeteer/run-all-tests.js",
     "test:headed": "HEADLESS=false node tests/puppeteer/run-all-tests.js",
+    "test:watch": "HEADLESS=false SLOW_MO=100 node tests/puppeteer/run-all-tests.js",
+    "test:debug": "HEADLESS=false SLOW_MO=500 DEVTOOLS=true node tests/puppeteer/run-all-tests.js",
+    "test:quick": "HEADLESS=true node tests/puppeteer/critical-path-tests.js",
+    "demo:headless": "HEADLESS=true node tests/puppeteer/demo-test.js",
+    "demo:headed": "HEADLESS=false node tests/puppeteer/demo-test.js",
+    "demo:watch": "HEADLESS=false SLOW_MO=200 node tests/puppeteer/demo-test.js",
     "concat:css": "concat -o global.css css/modal.css css/focus.css css/landing.css css/admin.css css/form-elements.css css/table.css css/section.css css/status.css css/side-panel.css css/header.css css/base.css",
     "minify:css": "npx postcss global.css -o global.css",
     "build:css": "npm-run-all concat:css minify:css",
