test: Update sh png json files
- Modified: 7 files
- Types: sh png json
- Key files: ai-changelog-master.sh package.json session-local.sh session-update.sh tests/puppeteer/demo-test.js
- Timestamp: 2025-10-02 15:34:00

Auto-committed by ai-local

--- a/package.json
+++ b/package.json
@@ -18,6 +18,15 @@
     "demo:headless": "HEADLESS=true node tests/puppeteer/demo-test.js",
     "demo:headed": "HEADLESS=false node tests/puppeteer/demo-test.js",
     "demo:watch": "HEADLESS=false SLOW_MO=200 node tests/puppeteer/demo-test.js",
+    "demo:slow": "HEADLESS=false SLOW_MO=1500 node tests/puppeteer/demo-test.js",
+    "demo:keep-open": "HEADLESS=false KEEP_BROWSER_OPEN=true node tests/puppeteer/demo-test.js",
+    "demo:slow-keep": "HEADLESS=false SLOW_MO=1500 KEEP_BROWSER_OPEN=true node tests/puppeteer/demo-test.js",
+    "demo:close": "HEADLESS=false KEEP_BROWSER_OPEN=false node tests/puppeteer/demo-test.js",
+    "demo:keep-browser": "HEADLESS=false KEEP_BROWSER_OPEN=true node tests/puppeteer/demo-test.js",
+    "demo:session-8du": "HEADLESS=false SLOW_MO=1500 SESSION_TOKEN=8DU node tests/puppeteer/demo-test.js",
+    "demo:session-new": "HEADLESS=false SLOW_MO=1500 SESSION_TOKEN=\"test new\" node tests/puppeteer/demo-test.js",
+    "demo:monitor-1": "HEADLESS=false SLOW_MO=1500 MONITOR_ID=1 node tests/puppeteer/demo-test.js",
+    "demo:monitor-2": "HEADLESS=false SLOW_MO=1500 MONITOR_ID=2 node tests/puppeteer/demo-test.js",
     "concat:css": "concat -o global.css css/modal.css css/focus.css css/landing.css css/admin.css css/form-elements.css css/table.css css/section.css css/status.css css/side-panel.css css/header.css css/base.css",
     "minify:css": "npx postcss global.css -o global.css",
     "build:css": "npm-run-all concat:css minify:css",
