--- a/my-mcp-servers/packages/puppeteer-minimal/package.json
+++ b/my-mcp-servers/packages/puppeteer-minimal/package.json
@@ -1,37 +1,54 @@
 {
   "name": "@gjoeckel/mcp-puppeteer-minimal",
   "version": "1.0.0",
-  "description": "Minimal Puppeteer MCP Server - Essential browser automation tools only",
   "type": "module",
+  "description": "Puppeteer MCP Server with minimal tool set (4 essential tools only)",
   "main": "build/index.js",
+  "types": "build/index.d.ts",
   "bin": {
-    "mcp-puppeteer-minimal": "build/index.js"
+    "mcp-puppeteer-minimal": "./build/index.js"
   },
+  "files": [
+    "build/**/*",
+    "README.md",
+    "LICENSE"
+  ],
   "scripts": {
     "build": "tsc",
+    "prepare": "npm run build",
+    "prepublishOnly": "npm run clean && npm run build",
     "start": "node build/index.js",
-    "dev": "tsc --watch"
+    "clean": "rm -rf build node_modules"
   },
   "keywords": [
     "mcp",
+    "mcp-server",
+    "model-context-protocol",
     "puppeteer",
-    "browser",
-    "automation",
-    "minimal"
+    "cursor",
+    "ai-tools"
   ],
   "author": "gjoeckel",
-  "license": "MIT",
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gjoeckel/my-mcp-servers.git",
+    "directory": "packages/puppeteer-minimal"
+  },
+  "bugs": {
+    "url": "https://github.com/gjoeckel/my-mcp-servers/issues"
+  },
+  "homepage": "https://github.com/gjoeckel/my-mcp-servers/tree/main/packages/puppeteer-minimal#readme",
   "dependencies": {
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "puppeteer": "^23.0.0",
-    "zod": "^3.22.0"
+    "zod": "^3.22.0",
+    "puppeteer": "^21.0.0"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
     "typescript": "^5.0.0"
   },
-  "files": [
-    "build/**/*",
-    "README.md"
-  ]
+  "engines": {
+    "node": ">=18.0.0"
+  }
 }
