Remove all puppeteer references, replace with playwright-minimal
- Updated all documentation to reference playwright-minimal instead of puppeteer-minimal
- Updated package.json install script to include playwright-minimal
- All branches now consistently use playwright-minimal terminology

--- a/my-mcp-servers/package.json
+++ b/my-mcp-servers/package.json
@@ -7,7 +7,7 @@
     "build-all": "./scripts/build-all.sh",
     "link-all": "./scripts/link-all.sh",
     "test-all": "./scripts/test-all.sh",
-    "install-all": "npm install && cd packages/shell-minimal && npm install && cd ../puppeteer-minimal && npm install && cd ../github-minimal && npm install",
+    "install-all": "npm install && cd packages/shell-minimal && npm install && cd ../playwright-minimal && npm install && cd ../github-minimal && npm install",
     "clean-all": "rm -rf packages/*/node_modules packages/*/build packages/*/dist",
     "test": "npm run test-all"
   },
